--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -95,6 +95,8 @@
                                 <br>
                             </div>
                             <div class="d-block mt-3" style="font-size: 12px;">
+                                <b>Точки</b><br>
+                                Клик: рисует сечение толщи воды в окрестности точки. Наведение: инфо про точку.
                                 <b>В толще воды</b><br>
                                 Наведение на точку или импульс: покажет отражения в толще воды, глубину, начало отражения ото дна pulseRising мкс, ширину пульса pulseWidth мкс.                                
                             </div>
@@ -215,7 +217,7 @@
                                 return $(this).attr('w_mks') < pulseW_mks;
                             }).hide();
                         }
-                        $('div.sonar__2D_pulse').show().filter(function () {
+                        $('div.sonar__section_pulse').show().filter(function () {
                             return $(this).attr('w_mks') < pulseW_mks;
                         }).hide();
 
@@ -239,7 +241,7 @@
 
 
                 function sonar__pulses_setColor() {
-                    $('div.sonar__2D_pulse').each(function () {
+                    $('div.sonar__section_pulse').each(function () {
                         const w_mks = parseInt($(this).attr('w_mks')) || 0;
                         $(this).css('background-color', sonar__getColor_power_mks(w_mks, sonar__colors_power_isBW));
                     });
@@ -248,10 +250,10 @@
                         $(this).css('background-color', sonar__getColor_power_mks(w_mks, sonar__colors_power_isBW));
                     });
                     if (sonar__colors_power_isBW) {
-                        $('div.sonar__2D_pulse').css('opacity', 0.6);
+                        $('div.sonar__section_pulse').css('opacity', 0.6);
                         //$('div.logic_pulseOverBottom').css('opacity', 0.6);
                     } else {
-                        $('div.sonar__2D_pulse').css('opacity', 1);
+                        $('div.sonar__section_pulse').css('opacity', 1);
                         //$('div.logic_pulseOverBottom').css('opacity', 1);
                     }
                 }
@@ -396,7 +398,7 @@
                     sonar__section_dLat = parseFloat($('#sonar__section_dLat').val()) || 0;
                     sonar__section_dLng = parseFloat($('#sonar__section_dLng').val()) || 0;
 
-                    $('div.logic_pulsesOverBottom_block').unbind('click').click(function () {
+                    $('div.sonar__circles').unbind('click').click(function () {
                         const lat = parseFloat($(this).attr('lat')) || 0;
                         const lng = parseFloat($(this).attr('lng')) || 0;
                         const idx = lat + '_' + lng;
@@ -430,7 +432,7 @@
 
                     //hide weak signals
                     const pulseW_mks = parseInt($('#sonar__range_pulse_w_min_show').val()) || 0;
-                    $('div.sonar__2D_pulse').show().filter(function () {
+                    $('div.sonar__section_pulse').show().filter(function () {
                         return $(this).attr('w_mks') < pulseW_mks;
                     }).hide();
                 }
@@ -439,14 +441,14 @@
                     const left_px = sonar__section_isVertical ? sonar__getOffsetLat_px(lat) : sonar__getOffsetLng_px(lng);
                     let mt_px = 5 + sonar__mks2px_fullScale(data.depth_mks, sonar__depth_max * sonar__mks2m);
 
-                    let html = '<div class="sonar__2D_pulseBottom" title="' + (Math.round(data.depthM * 100) / 100) + 'm" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; "></div>';
+                    let html = '<div class="sonar__section_pulseBottom" title="' + (Math.round(data.depthM * 100) / 100) + 'm" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; "></div>';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
                         }
                         const pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW);
                         mt_px = sonar__mks2px_fullScale(pulse.R);
-                        html += '<div class="sonar__2D_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
+                        html += '<div class="sonar__section_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
                     }
                     return html;
                 }
@@ -483,7 +485,7 @@
                      }
                      html += '</div>';*/
 
-                    html += '<div class="sonar__circles" title="' + (Math.round(data.depthM * 100) / 100) + 'm" style="left:' + left_px + 'px; top:' + top_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; height:' + sonar__pulse_w_px + 'px; ">';
+                    html += '<div class="sonar__circles" lat="' + lat + '" lng="' + lng + '" title="' + (Math.round(data.depthM * 100) / 100) + 'm lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + top_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; height:' + sonar__pulse_w_px + 'px; ">';
                     html += '</div>';
 
                     $('#sonar__3D_block').append(html);
@@ -562,7 +564,7 @@
         border: 1px solid #003580;             
     }
 
-    .sonar__2D_pulseBottom{        
+    .sonar__section_pulseBottom{        
         display: block;
         float: left;        
         height: 8px;         
@@ -572,7 +574,7 @@
         overflow: hidden;     
         z-index: 1;
     }
-    .sonar__2D_pulse{     
+    .sonar__section_pulse{     
         opacity: 1;
         background-color: black;       
         position: absolute;    
